# vigilant-codex-k3a

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .markdownlint.yaml  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  .questrade-tokens.json  02_graph_elements.ipynb  AGENTS.md  CARRIER_GRADE_UPGRADE.md  CARRIER_GRADE_UPGRADE_FIXED.md  CONFIG_REORGANIZATION_STATUS.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  EXECUTE_CLEANUP_NOW.sh  EXECUTE_NOW.md  LICENSE  README.md  cleanup-now.sh  consolidate-readmes.sh  docker-compose.codex.yml  docker-compose.yml  eslint.config.mjs  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vitest.config.ts
.clinerules/: custom_instructions.md  learning-journal.md  main-rules.md  pattern-examples.md  process-evolution.md  reading-protocol.md  verification.md  writing-protocol.md
.codex/: AUTOMATION_RULES.md  auth.json  config.json  config.toml  docker.md  history.jsonl  instructions.md  version.json
.github/: README.copilotmd  copilot-instructions.md
.github/agents/: persistent.agent.md
.github/chatmodes/: iterative-nextjs-dev.chatmode.md  iterative-nextjs.chatmode.md  notebook-specialist.chatmode.md  plan.chatmode.md  questrade-sdk-developer.chatmode.md  setup-context.chatmode.md  tsdoc-typedoc.chatmode.md  vscode-helper.chatmode.md
.github/instructions/: README.md  ai-instruction-creation.instructions.md  ai-prompt-creation.instructions.md  x-cards.instructions.md  (+27 more)
agent-framework/: README.md  package.json  tsconfig.json
agent-system/: package.json  tsconfig.json
docs/: README.md  ios-meta-and-links.instructions.md
examples/: time.ts
init/: README.md
memory-bank/: AUDIT.sync.md  MEMORY_BANK_ASSESSMENT_2025-12-06.md  README.consolidated.md  README.md  README.sync.md  activeContext-questrade-example-playground.md  activeContext.log.md  activeContext.md  dependencies.md  docker-workflow.md  memory-bank-assessment-2025-12-06.md  productContext.md  progress-questrade-example-playground.md  progress.md  projectbrief.md  readme-drift-resolution.md  root-contexts.md  systemPatterns.md  techContext.md  testing-guide.md
notebooks/: 01_type_annotations.ipynb  02_graph_elements.ipynb  README.md  copilot_collaboration_demo.ipynb  openai_api_prototyping.ipynb  prototyping-best-practices.ipynb
prisma/: schema.prisma
python/: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pylintrc  pyproject.toml  requirements.txt
python/agent_system/: README.md  __init__.py  agents.py  memory.py  tools.py
python/retrieval_agents/: README.md  __init__.py  agent.py  base.py  memory.py  run_example.py  supervisor.py  tools.py  worker.py
python/src/vigilant_codex/: __init__.py  cli.py  config.py  logger.py
python/src/vigilant_codex/api/: __init__.py  main.py
python/tests/: conftest.py  test_config.py
scripts/: README.consolidated.md  README.final.md  README.md  README.rewrite.md  README.sync.md  README.synced.md  activate_web_dev_environment.sh  analyze-test-structure.sh  autonomous-state-manager.sh  browser-error-monitor.sh  cdp-browser-monitor.mjs  check-dependencies.sh  check-markdown.sh  check-memory-bank.sh  check-readme-counts.sh  check-readme-variants.sh  check_readme_compliance.sh  cleanup-now.sh  cleanup_readmes.sh  cleanup_readmes_carrier.sh  codex_rebuild.sh  codex_run.sh  codex_shell.sh  codex_start.sh  codex_stop.sh  codex_test.sh  commit-guard.sh  consolidate-readmes.sh  create-nextjs-web.sh  generate-instruction-file.sh  generate-prompt-file.sh  generate-readme-sync.py  genesis_boot.sh  get_current_datetime.sh  init-empty-copilot-project.sh  init-fuller.sh  init-genesis.sh  init.sh  install-hooks.sh  inventory-prompts.sh  (+34 more)
src/: README.md  cli.ts  example.ts  example2.ts  index.ts  log.ts  logger.ts  main.ts  tmp-example-001.ts
templates/: env.example
test/: manual.test.ts  rules.test.ts  scheduler.test.ts  smartFetch.test.ts  storage.test.ts  toError.test.ts  tokenBucket.test.ts
tests/: accountActivitySchema.test.ts  accountSchema.test.ts  authManager.test.ts  balanceSchema.test.ts  error.test.ts  executionSchema.test.ts  positionSchema.test.ts  restClient.test.ts  tokenBucket.test.ts
web/: .gitignore  ClineMemoryBank.md  ITERATIVE-DEVELOPMENT-ACTIVATED.md  README-ENVIRONMENT.md  README.md  eslint.config.mjs  package.json  vitest.config.ts
(+433 files in other folders)
